--- a/wiz_demo/main.css
+++ b/wiz_demo/main.css
@@ -7,6 +7,9 @@ body {
         'sans-serif';
     background-color: #f2f2f2;
 }
+b {
+    font-weight: 1,300;
+}
 
 /* nav */
 
@@ -62,7 +65,7 @@ a.navbar-item:hover {
 /* content */
 
 .idea {
-    padding: 30px 0;
+    padding: 50px 0;
 }
 
 .column {
