--- a/wiz_demo/main.css
+++ b/wiz_demo/main.css
@@ -56,7 +56,7 @@ a.navbar-item.navbar-item-active:hover {
 }
 
 .desc {
-    padding: 30px 0;
+    padding: 30px 0 30px 0;
 }
 
 a.navbar-brand:hover {
@@ -71,8 +71,12 @@ a.navbar-item:hover {
 
 /* content */
 
+.heading {
+    padding: 20px 0 0 0
+}
+
 .idea {
-    padding: 30px 0 100px 0;
+    padding: 10px 0 100px 0;
 }
 
 .column {
